--- a/Vecherinka Website/css/vecherinka-copy.css
+++ b/Vecherinka Website/css/vecherinka-copy.css
@@ -7,6 +7,7 @@ body{
     font-weight:  400;
     font-size: 14px;
     color: #0a0a0a;
+    background-color: #F5F5F7;
 
 }
 
@@ -27,6 +28,13 @@ body{
 }
 .menu {
     display: flex;
+    flex-grow: 1;
+    flex-basis: 0;
+}
+.phone{
+    flex-grow: 1;
+    flex-basis: 0;
+    text-align: right;
 }
 .menu-item{
     list-style-type: none;
@@ -49,4 +57,92 @@ body{
     color: inherit;
 }
 .logo {
+}
+
+
+/* Main */
+.main {
+}
+.headline {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 71px;
+    margin-bottom: 40px;
+}
+.container {
+}
+.title {
+    font-size: 64px ;
+    color: #490E84;
+    text-transform: uppercase;
+    line-height: 77px;
+}
+.header-line-botton {
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    padding: 22px 118px 19px;
+    background-color: #490E84;
+    border-radius: 30px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+    margin: 25px 0 0 0;
+}
+
+
+
+
+/* What's new */
+.news {
+    background-color: #fff;
+    padding: 90px 0;
+}
+.news-title {
+    color: #717171;
+    text-align: center;
+    font-size: 32px;
+    line-height: 38px;
+    font-weight: 700;
+    margin: 0 0 50px;
+}
+.news-info {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.info {
+    width: 40%;
+}
+.info p{
+    margin-bottom: 30px;
+}
+.info p:last-child{
+    font-weight: 700;
+}
+
+
+/* Color*/
+
+
+.news-title {
+    margin-bottom: 57px;
+}
+.color-iphone {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.color-item {
+    display: block;
+    text-align: center;
+}
+.color-item h3 {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 26px;
+    color: #0A0A0A;
 }
